Clean up 2.3 code
Refactor use of deprecated methods, remove unused imports, and update baseline targets